--- a/css/a15.css
+++ b/css/a15.css
@@ -1,5 +1,5 @@
 div {
-    background-color: blueviolet;
-    color: white;
-    width: 1000px;
+  background-color: blue;
+  color: white;
+  width: 1000px;
 }
